fixed pricing button overlap by going to mobile view sooner

--- a/src/sass/_pricing.scss
+++ b/src/sass/_pricing.scss
@@ -27,7 +27,7 @@
   margin-top: -638px;
 }
 .carousel-item {
-  @include respond("lg") {
+  @include respond("xl") {
     width: 25%;
     display: block;
     margin-right: 0;
